--- a/index.html
+++ b/index.html
@@ -331,6 +331,26 @@
 
 
 
+<!-- START-FOOTER -->
+
+
+
+<footer>
+  <div class="footer-left">
+
+      <p>2023 <span>Sovware</span></p>
+      
+
+
+  </div>
+  <div class="footer-right">
+      <a href="">About</a>
+      <a href="">Team</a>
+      <a href="">Contact</a>
+  </div>
+</footer>
+
+<!-- END-FOOTER -->
 
 
 
@@ -341,7 +361,20 @@
 
 
 
-    <!------ start-menu -------->
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!------ START-MENU -------->
 
 
 
@@ -465,7 +498,14 @@
   </div>
 </div>
 
-<!-- end-menu -->
+
+
+
+
+
+
+
+<!-- END-MENU -->
 
 
 
@@ -703,228 +743,228 @@
           <div class="container-products">
             <!-- card1 -->
             <div class="card-chair1">
-              <img src="/img/img-cards/montes-scelerisque.png" alt="">
+              <img src="img/montes-scelerisque.png" alt="">
               <div class="like"></div>
               <div class="data-card-chair">
                 <h2>Montes Scelerisque</h2>
-                <img src="./img/img-cards/stars.jpg" alt="">
+                <img src="img/stars.jpg" alt="">
                 <span>4.9 </span>
                 <p>778 Reviews</p>
                 <h4>$200.00</h4>
                 <del>$100.00</del>
                 <p id="off-price">50% Off</p>
                 <div class="buttons-chair">
-                  <button class="add-cart">add to cart</button>
-                  <button class="buy">buy now</button>
+                  <button class="add-cart">Add to cart</button>
+                  <button class="buy">Buy now</button>
 
                 </div>
               </div>
             </div>
             <!-- card 2 -->
             <div class="card-chair1">
-              <img src="./img/img-cards/leo sodales varius.png" alt="">
+              <img src="img/leo sodales varius.png" alt="">
               <div class="like"></div>
               <div class="data-card-chair">
                 <h2>Leo Sodales Varius</h2>
-                <img src="./img/img-cards/stars.jpg" alt="">
+                <img src="img/stars.jpg" alt="">
                 <span>4.9 </span>
                 <p>778 Reviews</p>
                 <h4>$200.00</h4>
                 <del>$100.00</del>
                 <p id="off-price">50% Off</p>
                 <div class="buttons-chair">
-                  <button class="add-cart">add to cart</button>
-                  <button class="buy">buy now</button>
+                  <button class="add-cart">Add to cart</button>
+                  <button class="buy">Buy now</button>
 
                 </div>
               </div>
             </div>
             <!-- cart 3 -->
             <div class="card-chair1">
-              <img src="/img/img-cards/boss-chair.png" alt="">
+              <img src="img/chair2.png" alt="">
               <div class="like"></div>
               <div class="data-card-chair">
                 <h2>Hanging Lamp Berlingo</h2>
-                <img src="./img/img-cards/stars.jpg" alt="">
+                <img src="img/stars.jpg" alt="">
                 <span>4.9 </span>
                 <p>778 Reviews</p>
                 <h4>$200.00</h4>
                 <del>$100.00</del>
                 <p id="off-price">50% Off</p>
                 <div class="buttons-chair">
-                  <button class="add-cart">add to cart</button>
-                  <button class="buy">buy now</button>
+                  <button class="add-cart">Add to cart</button>
+                  <button class="buy">Buy now</button>
 
                 </div>
               </div>
             </div>
             <!-- cart4 -->
             <div class="card-chair1">
-              <img src="/img/img-cards/chair3.png" alt="">
+              <img src="img/chair3.png" alt="">
               <div class="like"></div>
               <div class="data-card-chair">
                 <h2>Commodo Adipiscing</h2>
-                <img src="./img/img-cards/stars.jpg" alt="">
+                <img src="img/stars.jpg" alt="">
                 <span>4.9 </span>
                 <p>778 Reviews</p>
                 <h4>$200.00</h4>
                 <del>$100.00</del>
                 <p id="off-price">50% Off</p>
                 <div class="buttons-chair">
-                  <button class="add-cart">add to cart</button>
-                  <button class="buy">buy now</button>
+                  <button class="add-cart">Add to cart</button>
+                  <button class="buy">Buy now</button>
 
                 </div>
               </div>
             </div>
             <!-- cart 5 -->
             <div class="card-chair1">
-              <img src="/img/img-cards/plate.png" alt="">
+              <img src="img/plate.png" alt="">
               <div class="like"></div>
               <div class="data-card-chair">
                 <h2>Leo Sodales Varius</h2>
-                <img src="./img/img-cards/stars.jpg" alt="">
+                <img src="img/stars.jpg" alt="">
                 <span>4.9 </span>
                 <p>778 Reviews</p>
                 <h4>$200.00</h4>
                 <del>$100.00</del>
                 <p id="off-price">50% Off</p>
                 <div class="buttons-chair">
-                  <button class="add-cart">add to cart</button>
-                  <button class="buy">buy now</button>
+                  <button class="add-cart">Add to cart</button>
+                  <button class="buy">Buy now</button>
 
                 </div>
               </div>
             </div>
             <!-- cart 6 -->
             <div class="card-chair1">
-              <img src="/img/img-cards/chair4 (1).png" alt="">
+              <img src="img/chair4 (1).png" alt="">
               <div class="like"></div>
               <div class="data-card-chair">
                 <h2>Hanging Lamp Berlingo</h2>
-                <img src="./img/img-cards/stars.jpg" alt="">
+                <img src="img/stars.jpg" alt="">
                 <span>4.9 </span>
                 <p>778 Reviews</p>
                 <h4>$200.00</h4>
                 <del>$100.00</del>
                 <p id="off-price">50% Off</p>
                 <div class="buttons-chair">
-                  <button class="add-cart">add to cart</button>
-                  <button class="buy">buy now</button>
+                  <button class="add-cart">Add to cart</button>
+                  <button class="buy">Buy now</button>
 
                 </div>
               </div>
             </div>
             <!-- cart7 -->
             <div class="card-chair1">
-              <img src="/img/img-cards/juse.png" alt="">
+              <img src="img/juse.png" alt="">
               <div class="like"></div>
               <div class="data-card-chair">
                 <h2>Commodo Adipiscing</h2>
-                <img src="./img/img-cards/stars.jpg" alt="">
+                <img src="img/stars.jpg" alt="">
                 <span>4.9 </span>
                 <p>778 Reviews</p>
                 <h4>$200.00</h4>
                 <del>$100.00</del>
                 <p id="off-price">50% Off</p>
                 <div class="buttons-chair">
-                  <button class="add-cart">add to cart</button>
-                  <button class="buy">buy now</button>
+                  <button class="add-cart">Add to cart</button>
+                  <button class="buy">Buy now</button>
 
                 </div>
               </div>
             </div>
             <!-- cart8 -->
             <div class="card-chair1">
-              <img src="/img/img-cards/leo sodales varius.png" alt="">
+              <img src="img/leo sodales varius.png" alt="">
               <div class="like"></div>
               <div class="data-card-chair">
                 <h2>Leo Sodales Varius</h2>
-                <img src="./img/img-cards/stars.jpg" alt="">
+                <img src="img/stars.jpg" alt="">
                 <span>4.9 </span>
                 <p>778 Reviews</p>
                 <h4>$200.00</h4>
                 <del>$100.00</del>
                 <p id="off-price">50% Off</p>
                 <div class="buttons-chair">
-                  <button class="add-cart">add to cart</button>
-                  <button class="buy">buy now</button>
+                  <button class="add-cart">Add to cart</button>
+                  <button class="buy">Buy now</button>
 
                 </div>
               </div>
             </div>
             <!-- cart8 -->
             <div class="card-chair1">
-              <img src="/img/img-cards/boss-chair.png" alt="">
+              <img src="img/boss-chair.png" alt="">
               <div class="like"></div>
               <div class="data-card-chair">
                 <h2>Montes Scelerisque</h2>
-                <img src="./img/img-cards/stars.jpg" alt="">
+                <img src="img/stars.jpg" alt="">
                 <span>4.9 </span>
                 <p>778 Reviews</p>
                 <h4>$200.00</h4>
                 <del>$100.00</del>
                 <p id="off-price">50% Off</p>
                 <div class="buttons-chair">
-                  <button class="add-cart">add to cart</button>
-                  <button class="buy">buy now</button>
+                  <button class="add-cart">Add to cart</button>
+                  <button class="buy">Buy now</button>
 
                 </div>
               </div>
             </div>
             <!-- cart9 -->
             <div class="card-chair1">
-              <img src="/img/img-cards/only-juss.png" alt="">
+              <img src="img/only-juss.png" alt="">
               <div class="like"></div>
               <div class="data-card-chair">
                 <h2>Leo Sodales Varius</h2>
-                <img src="./img/img-cards/stars.jpg" alt="">
+                <img src="img/stars.jpg" alt="">
                 <span>4.9 </span>
                 <p>778 Reviews</p>
                 <h4>$200.00</h4>
                 <del>$100.00</del>
                 <p id="off-price">50% Off</p>
                 <div class="buttons-chair">
-                  <button class="add-cart">add to cart</button>
-                  <button class="buy">buy now</button>
+                  <button class="add-cart">Add to cart</button>
+                  <button class="buy">Buy now</button>
 
                 </div>
               </div>
             </div>
             <!-- cart10 -->
             <div class="card-chair1">
-              <img src="/img/img-cards/chair2.png" alt="">
+              <img src="img/chair2.png" alt="">
               <div class="like"></div>
               <div class="data-card-chair">
                 <h2>Hanging Lamp Berlingo</h2>
-                <img src="./img/img-cards/stars.jpg" alt="">
+                <img src="img/stars.jpg" alt="">
                 <span>4.9 </span>
                 <p>778 Reviews</p>
                 <h4>$200.00</h4>
                 <del>$100.00</del>
                 <p id="off-price">50% Off</p>
                 <div class="buttons-chair">
-                  <button class="add-cart">add to cart</button>
-                  <button class="buy">buy now</button>
+                  <button class="add-cart">Add to cart</button>
+                  <button class="buy">Buy now</button>
 
                 </div>
               </div>
             </div>
             <!-- cart11 -->
             <div class="card-chair1">
-              <img src="/img/img-cards/chair.png" alt="">
+              <img src="img/chair.png" alt="">
               <div class="like"></div>
               <div class="data-card-chair">
                 <h2>Commodo Adipiscing</h2>
-                <img src="./img/img-cards/stars.jpg" alt="">
+                <img src="img/stars.jpg" alt="">
                 <span>4.9 </span>
                 <p>778 Reviews</p>
                 <h4>$200.00</h4>
                 <del>$100.00</del>
                 <p id="off-price">50% Off</p>
                 <div class="buttons-chair">
-                  <button class="add-cart">add to cart</button>
-                  <button class="buy">buy now</button>
+                  <button class="add-cart">Add to cart</button>
+                  <button class="buy">Buy now</button>
 
                 </div>
               </div>
