--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
 
-<!-------------------- start-Header -------------------->
+<!-------------------- START-HEADER -------------------->
 
 
 
@@ -310,7 +310,7 @@
 
 
 
-<!-- end-header -->
+<!-- END-HEADER -->
 
 
 
@@ -350,7 +350,7 @@
   </div>
 </footer>
 
-<!-- END-FOOTER -->
+<!-- end-footer -->
 
 
 
@@ -371,10 +371,7 @@
 
 
 
-
-
-
-    <!------ START-MENU -------->
+    <!------ start-menu -------->
 
 
 
@@ -498,14 +495,7 @@
   </div>
 </div>
 
-
-
-
-
-
-
-
-<!-- END-MENU -->
+<!-- end-menu -->
 
 
 
