delet card image foolder
product

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
   </div>
 </footer>
 
-<!-- end-footer -->
+<!-- END-FOOTER-->
 
 
 
@@ -371,7 +371,7 @@
 
 
 
-    <!------ start-menu -------->
+    <!------ START-MENU -------->
 
 
 
